--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,18 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400");
+@import url("https://fonts.googleapis.com/css?family=Metal+Mania");
+
+@font-face {
+	font-family: "Booter - Zero Zero";
+	src: url(./Fonts/Booter-ZeroZero.woff) format("woff"),
+		url(./Fonts/Booter-ZeroZero.woff2) format("woff2");
+	font-weight: normal;
+	font-style: normal;
+}
 
 * {
 	box-sizing: border-box;
 	font-family: Raleway;
-	color: #777;
+	color: #777777;
 }
 
 html,
@@ -17,13 +26,28 @@ body {
 }
 
 .nav li {
-    display: inline;
+	display: inline;
 }
 
 .nav a {
-    padding: .5em;
-    color: white;
-    text-decoration: none;
+	display: inline-block;
+	padding: 0.5em;
+	color: white;
+	text-decoration: none;
+}
+
+.main-nav {
+	text-align: center;
+	font-size: 1.1em;
+	font-weight: lighter;
+	border-bottom: solid 1px rgba(255, 255, 255, 0.3);
+}
+.main-nav li {
+	padding: 0 5%;
+}
+
+.nav a:hover {
+	background-color: rgba(255, 255, 255, 0.3);
 }
 
 .main-header {
@@ -34,3 +58,181 @@ body {
 	padding-bottom: 30px;
 }
 
+.band-name {
+	text-align: center;
+	margin: 0;
+	font-size: 4em;
+	font-family: "Booter - Zero Zero";
+	font-weight: normal;
+	color: white;
+}
+
+.band-name-large {
+	font-size: 6em;
+}
+
+.content-section {
+	margin: 1em;
+	line-height: 1.5em;
+}
+
+.container {
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 0 1.5em;
+}
+
+.section-header {
+	font-family: "Metal Mania";
+	font-weight: normal;
+	color: #333;
+	text-align: center;
+	font-size: 2.5em;
+}
+
+.about-band-image {
+	float: left;
+	height: 180px;
+	width: auto;
+	margin: 5px 15px 5px 0;
+	border-radius: 2%;
+}
+
+.main-footer {
+	background-color: #36057e;
+	color: white;
+	padding: 0.25em 0;
+}
+
+.main-footer-container {
+	display: flex;
+	align-items: center;
+}
+
+.main-footer-container ul {
+	flex-grow: 1;
+	text-align: end;
+}
+
+.footer-nav li {
+	padding: 0 0.5em;
+}
+
+.footer-nav img {
+	width: 30px;
+	height: 30px;
+}
+
+.btn {
+	text-align: center;
+	vertical-align: middle;
+	padding: 0.67em;
+	cursor: pointer;
+}
+
+.btn-header {
+	margin: 0.5em 15% 2em 15%;
+	color: white;
+	border: 2px solid #2d9cdb;
+	background-color: rgba(255, 255, 255, 0.1);
+	border-radius: 0;
+	font-size: 1.2em;
+	font-weight: lighter;
+	padding-left: 2em;
+	padding-right: 2em;
+}
+
+.btn-header:hover {
+	background-color: rgba(255, 255, 255, 0.3);
+}
+
+.btn-play {
+	display: block;
+	margin: 0 auto;
+	color: #2d9cdb;
+	font-size: 4em;
+	border-radius: 50%;
+	padding: 0;
+	width: 100px;
+	height: 100px;
+}
+
+.tour-row {
+	border-bottom: 1px solid black;
+	padding-bottom: 1em;
+	margin-bottom: 1em;
+}
+
+.tour-row:last-child {
+	border-bottom: none;
+}
+
+.tour-item {
+	display: inline-block;
+	padding-right: 0.5em;
+}
+
+.tour-date {
+	color: #555555;
+	font-weight: bold;
+	width: 11%;
+}
+
+.tour-city {
+	width: 24%;
+}
+
+.tour-arena {
+	width: 42%;
+}
+
+.tour-btn {
+	max-width: 19%;
+}
+
+.btn-primary {
+	color: white;
+	background-color: #56ccf2;
+	border: none;
+	border-radius: .3em;
+	font-weight: bold;
+}
+
+.btn-primary:hover {
+	background-color: #2d9cdb;
+}
+
+.shop-item {
+	margin: 30px;
+}
+
+.shop-item-title {
+	display: block;
+	width: 100%;
+	text-align: center;
+	font-weight: bold;
+	font-size: 1.5em;
+	color: #333;
+	margin-bottom: 15px;
+}
+
+.shop-item-image {
+	height: 250px;
+}
+
+.shop-item-details {
+	display: flex;
+	align-items: center;
+	padding: 5px;
+}
+
+.shop-item-price {
+	flex-grow: 1;
+	color: #333;
+}
+
+.shop-items {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
